--- a/Atlassian.Stash.Api/Atlassian.Stash.Api.csproj
+++ b/Atlassian.Stash.Api/Atlassian.Stash.Api.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Entities\Clone.cs" />
     <Compile Include="Entities\Commit.cs" />
     <Compile Include="Entities\File.cs" />
+    <Compile Include="Entities\Group.cs" />
+    <Compile Include="Entities\GroupPermission.cs" />
     <Compile Include="Entities\Link.cs" />
     <Compile Include="Entities\Links.cs" />
     <Compile Include="Entities\Parent.cs" />
@@ -68,6 +70,8 @@
     <Compile Include="Entities\Repository.cs" />
     <Compile Include="Entities\Self.cs" />
     <Compile Include="Entities\Tag.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\UserPermission.cs" />
     <Compile Include="Helpers\UrlBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StashClient.cs" />
